--- a/contact.html
+++ b/contact.html
@@ -149,8 +149,9 @@
     >
       <div class="col-md-4 d-flex align-items-center">
         <a
-          href="/"
+          href="https://github.com/LiuLuchik/TheWaggyHostel"
           class="mb-3 me-2 ms-5 mb-md-0 text-muted text-decoration-none lh-1"
+          target="_blank"
         >
           <i class="fa-brands fa-github"></i>
         </a>
