--- a/about.html
+++ b/about.html
@@ -74,13 +74,7 @@
       id="footer"
       class="flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
     >
-      <div class="col-md-4 d-flex align-items-center">
-        <a
-          href="/"
-          class="mb-3 me-2 ms-5 mb-md-0 text-muted text-decoration-none lh-1"
-        >
-          <i class="fa-brands fa-github"></i>
-        </a>
+      <div class="col-md-4 mb-3 ms-5 d-flex align-items-center">
         <span class="mb-3 mb-md-0" style="color: #804825"
           >© 2023 The Waggy Hostel</span
         >
