change img size

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <body>
     <!-- --------------Header menu---------------------------->
     <header class="banner">
+      <img src="" />
       <h1>Welcome to The Waggy Hostel</h1>
     </header>
     <!--- Menu Items-->
