change banner image

--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
   <body>
     <!-- --------------Header menu---------------------------->
     <header class="banner">
-      <img src="" />
-      <h1>Welcome to The Waggy Hostel</h1>
+      <img
+        class="banner-img"
+        src="image/BannerIMG.jpg"
+        alt="Two happy puppies sit on the grass"
+      />
+      <div class="centered">
+        <h1>The Waggy Hostel</h1>
+      </div>
     </header>
     <!--- Menu Items-->
 
