change menu position and a map for lage screen

--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
     </div>
 
     <!-- MAP -->
-    <div class="d-none d-lg-block d-xxl-none">
+    <div class="d-none d-lg-block">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d37953.82598012331!2d-4.2512131481794295!3d55.86305551803455!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1677612449519!5m2!1sen!2suk"
         width="1200"
@@ -131,7 +131,7 @@
       ></iframe>
     </div>
 
-    <div class="d-sm-block d-md-none d-xl-none d-lg-none mt-1">
+    <div class="d-block d-md-none mt-1">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d37953.82598012331!2d-4.2512131481794295!3d55.86305551803455!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1677612449519!5m2!1sen!2suk"
         width="320"
