change img names

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="col" id="imageresponsive">
         <!-- d-none d-lg-block -->
         <img
-          src="/image/IMG_4059_.jpg"
+          src="/image/dog-and-cat.jpg"
           class="homepic"
           alt="Dog and cat sitting on an armchair"
         />
