--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
       </div>
       <div class="col" id="imageresponsive">
         <img
-          src="image/photo_2023-03-21_17-13-42_.jpg"
+          src="image/dog-on-chair.jpg"
           class="aboutpic"
           alt="Dog sitting on a chair"
         />
