add active class

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         ><img class="logo" src="/image/waggy-hostel-logo.png" alt="Logo"
       /></a>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="about.html" class="active">About</a>
       <a href="contact.html">Contact</a>
     </div>
     <!-- --------------Main content--------------------------- -->
