--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a href="index.html" style="border-bottom: none"
         ><img class="logo" src="/image/waggy-hostel-logo.png" alt="Logo"
       /></a>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </div>
