--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
       /></a>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html" class="active">Contact</a>
     </div>
     <!-- --------------Main content--------------------------- -->
     <div class="row">
