change banner image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header class="banner">
       <img
         class="banner-img"
-        src="image/BannerIMG.jpg"
+        src="image/BannerIMG1.jpg"
         alt="Two happy puppies sit on the grass"
       />
       <div class="centered">
